<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_person_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_password"
        android:inputType="textPassword"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:hint="@string/editText_date"
        android:inputType="date"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp" />

</LinearLayout>